# gamedev-math

./: Cargo.toml
src/: lerp.rs  lib.rs  mat2x2.rs  mat3x3.rs  mat4x4.rs  quaternion.rs  rect.rs  vector2.rs  vector3.rs  vector4.rs
